--- a/manifest/1.1.2/manifest.json
+++ b/manifest/1.1.2/manifest.json
@@ -1,85 +1,99 @@
 {
-	"short_name": "ELLE",
-	"name": "English Literature & Linguistics Explained",
-	"lang": "en",
-	"description": "Find study materials for English Language, Literature & Linguistics. EFL and ESL learners will find informative explanation to comprehend better English...",
-	"start_url": "/p/pwa.html",
-	"background_color": "#ffffff",
-	"theme_color": "#efefef",
-	"dir": "ltr",
-	"display": "standalone",
-	"orientation": "any",
-	"icons": [
-		{
-			"src": "images/icons/favicon.ico",
-			"type": "image/x-icon",
-			"sizes": "16x16"
-		},
-		{
-			"src": "images/icons/android-icon-192x192.png",
-			"type": "image/png",
-			"sizes": "192x192"
-		},
-		{
-			"src": "images/icons/apple-icon-180x180.png",
-			"type": "image/png",
-			"sizes": "180x180"
-		},
-		{
-			"src": "images/icons/apple-icon-152x152.png",
-			"type": "image/png",
-			"sizes": "152x152"
-		},
-		{
-			"src": "images/icons/apple-icon-144x144.png",
-			"type": "image/png",
-			"sizes": "144x144"
-		},
-		{
-			"src": "images/icons/apple-icon-120x120.png",
-			"type": "image/png",
-			"sizes": "120x120"
-		},
-		{
-			"src": "images/icons/apple-icon-114x114.png",
-			"type": "image/png",
-			"sizes": "114x114"
-		},
-		{
-			"src": "images/icons/favicon-96x96.png",
-			"type": "image/png",
-			"sizes": "96x96"
-		},
-		{
-			"src": "images/icons/apple-icon-76x76.png",
-			"type": "image/png",
-			"sizes": "76x76"
-		},
-		{
-			"src": "images/icons/apple-icon-72x72.png",
-			"type": "image/png",
-			"sizes": "72x72"
-		},
-		{
-			"src": "images/icons/apple-icon-60x60.png",
-			"type": "image/png",
-			"sizes": "60x60"
-		},
-		{
-			"src": "images/icons/apple-icon-57x57.png",
-			"type": "image/png",
-			"sizes": "57x57"
-		},
-		{
-			"src": "images/icons/favicon-32x32.png",
-			"type": "image/png",
-			"sizes": "32x32"
-		},
-		{
-			"src": "images/icons/favicon-16x16.png",
-			"type": "image/png",
-			"sizes": "16x16"
-		}
-	],
-	"prefer_related_applications": false
+    "short_name": "ELLE",
+    "name": "English Literature & Linguistics Explained",
+    "lang": "en",
+    "description": "Find study materials for English Language, Literature & Linguistics. EFL and ESL learners will find informative explanation to comprehend better English...",
+    "start_url": "https://englishstudyhelp.blogspot.com/p/pwa.html",
+    "scope": "https://englishstudyhelp.blogspot.com/",
+    "background_color": "#ffffff",
+    "theme_color": "#efefef",
+    "dir": "ltr",
+    "display": "standalone",
+    "orientation": "any",
+    "icons": [
+    {
+        "src": "images/icons/favicon.ico",
+        "type": "image/x-icon",
+        "sizes": "16x16",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/android-icon-192x192.png",
+        "type": "image/png",
+        "sizes": "192x192",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/apple-icon-180x180.png",
+        "type": "image/png",
+        "sizes": "180x180",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/apple-icon-152x152.png",
+        "type": "image/png",
+        "sizes": "152x152",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/apple-icon-144x144.png",
+        "type": "image/png",
+        "sizes": "144x144",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/apple-icon-120x120.png",
+        "type": "image/png",
+        "sizes": "120x120",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/apple-icon-114x114.png",
+        "type": "image/png",
+        "sizes": "114x114",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/favicon-96x96.png",
+        "type": "image/png",
+        "sizes": "96x96",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/apple-icon-76x76.png",
+        "type": "image/png",
+        "sizes": "76x76",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/apple-icon-72x72.png",
+        "type": "image/png",
+        "sizes": "72x72",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/apple-icon-60x60.png",
+        "type": "image/png",
+        "sizes": "60x60",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/apple-icon-57x57.png",
+        "type": "image/png",
+        "sizes": "57x57",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/favicon-32x32.png",
+        "type": "image/png",
+        "sizes": "32x32",
+        "purpose": "any maskable"
+    },
+    {
+        "src": "images/icons/favicon-16x16.png",
+        "type": "image/png",
+        "sizes": "16x16",
+        "purpose": "any maskable"
+    }],
+    "prefer_related_applications": false
 }
