--- a/manifest/1.1.5/manifest.json
+++ b/manifest/1.1.5/manifest.json
@@ -4,7 +4,7 @@
     "lang": "en",
     "description": "Find study materials for English Language, Literature & Linguistics. EFL and ESL learners will find informative explanation to comprehend better English...",
     "id": "/p/pwa.html",
-    "start_url": "/p/pwa.html",
+    "start_url": "https://englishstudyhelp.blogspot.com/p/pwa.html",
     "scope": "/",
     "background_color": "#ffffff",
     "theme_color": "#efefef",
