Web maifest update

--- a/manifest/1.1.5/manifest.json
+++ b/manifest/1.1.5/manifest.json
@@ -20,6 +20,12 @@
         "purpose": "any"
     },
     {
+        "src": "images/icons/favicon-512x512.png",
+        "type": "image/png",
+        "sizes": "512x512",
+        "purpose": "any"
+    },
+    {
         "src": "images/icons/android-icon-192x192.png",
         "type": "image/png",
         "sizes": "192x192",
